# botmother-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  test.yml
botmother_agent/: __init__.py  agent.py  api.py  auth.py  cli.py  database.py  plugins.py  prompts.py  schema.py  validator.py
flows/: flow_20260227_102644.json
keys/: public.pem
