[project]
name = "botmother-agent"
version = "0.1.0"
description = "LangGraph agent for generating Botmother engine flow JSON"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.scripts]
botmother-agent = "botmother_agent.cli:main"
